--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,69 +1,24 @@
-button:focus,button:active{
-outline: none;
-}
 
- .new{
-  margin-bottom:0rem;
-  padding-bottom: 11.2px;
-  padding:18px;
-  margin: auto;
-  margin-top: 33px;;
-  font-size: medium;
+
+.imgouter{
+  background-color:  #f5f5f5;;
   text-align: center;
-
-}
-.new div{
-margin:auto;
- clear: both;
-
 }
 
-
-.new *{
-
-margin:9px;
-}
-.new label{
-width: 40%;
-float: left;
-text-align:right ;
-margin-left: 13px;
-font-size: 16.8px;
-margin-right: 0;
-}
-.order label{
-  width:20%;
-  text-align: left;
-  margin-left: 16%;
+.bodydet{
+  display: flex;
+  flex-direction: row;
+  color:"lightgrey"
 }
 
-.new button{
-  background-color:blue;
-  margin-top:40px;
-  margin-bottom: 40px;
-  width:80px;
-  height:35px;
-  padding:2.24px;
-  border-radius: 0.4rem;
-  color:white;
+.bodydeticon{
+  font-size: 18px;
+  color:"lightgrey";
+  
 }
-.new button:focus{
-outline: none;
+.ant-form{
+  margin:3px;
 }
-
-.new input,.new select{
-width:30%;
-text-align: left;
-margin-right: 20%;
-height:20px;
-
-
-}
-
-.new input:focus,.new select:focus{
-outline: rgb(0, 102, 255);
-
-border-radius: 0.5rem;
-border-width: 0.1rem;
-
+.ant-form-item{
+  margin-Bottom:30px;
 }
